[package]
name = "fc-db"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier database backend"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
sp-core = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-database = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-runtime = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage"}
kvdb = "0.10.0"
kvdb-rocksdb = "0.14.0"
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
parking_lot = "0.11.1"
