[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Frontier database backend"
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "fc-db"
repository  = "https://github.com/paritytech/frontier/"
version     = "2.0.0-dev"

[dependencies]
codec        = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
fp-storage   = { version = "2.0.0-dev", path = "../../primitives/storage" }
kvdb         = "0.10.0"
kvdb-rocksdb = "0.14.0"
parking_lot  = "0.11.1"
sp-core      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-database  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-runtime   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
