[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
jsonrpc-core            = { version = "18.0" }
jsonrpc-derive          = { version = "18.0" }
jsonrpc-core-client     = { version = "18.0" }
jsonrpc-pubsub          = { version = "18.0" }
log                     = { version = "0.4.8" }
ethereum-types          = { version = "0.12.0" }
evm                     = { version = "0.30.1" }
fc-consensus            = { version = "2.0.0-dev", path = "../consensus" }
fc-db                   = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core             = { version = "1.1.0-dev", path = "../rpc-core" }
fp-consensus            = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc                  = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage              = { version = "2.0.0-dev", path = "../../primitives/storage"}
sp-io                   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-runtime              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-api                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-transaction-pool     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sc-transaction-pool     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-storage              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sp-blockchain           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sc-transaction-pool-api = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sc-service              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sc-client-api           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sc-rpc                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
sc-network              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.0" }
pallet-evm              = { version = "6.0.0-dev", path = "../../frame/evm" }
fp-evm                  = { version = "3.0.0-dev", path = "../../primitives/evm" }
pallet-ethereum         = { version = "4.0.0-dev", path = "../../frame/ethereum" }
ethereum                = { version = "0.9.0", features = ["with-codec"] }
codec                   = { package = "parity-scale-codec", version = "2.0.0" }
rlp                     = { version = "0.5" }
futures                 = { version = "0.3.1", features = ["compat"] }
sha3                    = { version = "0.8" }
rustc-hex               = { version = "2.1.0", default-features = false }
libsecp256k1            = { version = "0.3" }
rand                    = { version = "0.7" }
lru                     = { version = "0.6.6" }
parking_lot             = { version = "0.11.1" }

[features]
rpc_binary_search_estimate = []
