[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Ethereum RPC (web3) compatibility layer for Substrate."
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "fc-rpc"
version     = "2.0.0-dev"

[dependencies]
codec                   = { package = "parity-scale-codec", version = "2.0.0" }
ethereum                = { version = "0.11.1", features = ["with-codec"] }
ethereum-types          = "0.12"
evm                     = "0.33.1"
fc-consensus            = { version = "2.0.0-dev", path = "../consensus" }
fc-db                   = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core             = { version = "1.1.0-dev", path = "../rpc-core" }
fp-consensus            = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-evm                  = { version = "3.0.0-dev", path = "../../primitives/evm" }
fp-rpc                  = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage              = { version = "2.0.0-dev", path = "../../primitives/storage" }
futures                 = { version = "0.3.1", features = ["compat"] }
jsonrpc-core            = "18.0"
jsonrpc-core-client     = "18.0"
jsonrpc-derive          = "18.0"
jsonrpc-pubsub          = "18.0"
libsecp256k1            = "0.5"
log                     = "0.4.8"
lru                     = "0.6.6"
parking_lot             = "0.11.1"
rand                    = "0.7"
rlp                     = "0.5"
rustc-hex               = { version = "2.1.0", default-features = false }
sc-client-api           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-network              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-rpc                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-service              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-transaction-pool     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sc-transaction-pool-api = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sha3                    = "0.8"
sp-api                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-block-builder        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-blockchain           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-io                   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-runtime              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-storage              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-transaction-pool     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
tokio                   = { version = "1.14", features = ["sync"] }

[features]
rpc_binary_search_estimate = []
