[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
ethereum = { version = "0.11.1", features = ["with-codec"] }
ethereum-types = "0.12"
evm = "0.33.1"
futures = { version = "0.3.1", features = ["compat"] }
hex = "0.4"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-pubsub = "18.0"
libsecp256k1 = "0.7"
log = "0.4.8"
lru = "0.6.6"
rand = "0.8"
rlp = "0.5"
tokio = { version = "1.14", features = ["sync"] }

codec = { package = "parity-scale-codec", version = "2.0.0" }
sc-client-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-network = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-rpc = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-service = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-transaction-pool = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-transaction-pool-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-block-builder = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-blockchain = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-core = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-io = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-runtime = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-storage = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }

fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }

[dev-dependencies]
tempfile = "3.3.0"
substrate-test-runtime-client = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
frontier-template-runtime = { path = "../../template/runtime", default-features = false, features = ["std", "aura"] }
sc-block-builder = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-consensus = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }

[features]
rpc_binary_search_estimate = []
