[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "EIP-1559 fee utils"
edition     = "2018"
homepage    = "https://substrate.dev"
license     = "Apache-2.0"
name        = "pallet-base-fee"
repository  = "https://github.com/paritytech/frontier/"
version     = "1.0.0"

	[package.metadata.docs.rs]
	targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec         = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
pallet-evm    = { path = "../evm", default-features = false }
scale-info    = { version = "1.0.0", default-features = false, features = ["derive"] }
serde         = { version = "1.0.101", optional = true }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

[dev-dependencies]
sp-io = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"scale-info/std",
]
