[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Dynamic fee handling for EVM."
edition     = "2018"
license     = "Apache-2.0"
name        = "pallet-dynamic-fee"
version     = "4.0.0-dev"

[dependencies]
async-trait   = "0.1"
codec         = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
pallet-evm    = { path = "../evm", version = "6.0.0-dev", default-features = false }
scale-info    = { version = "1.0.0", default-features = false, features = ["derive"] }
serde         = { version = "1.0.101", optional = true }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-inherents  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }

[dev-dependencies]
pallet-timestamp = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-io            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-inherents/std",
	"frame-system/std",
	"frame-support/std",
	"pallet-evm/std",
	"scale-info/std",
]
