[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Ethereum compatibility full block processing emulation pallet for Substrate."
edition     = "2018"
license     = "Apache-2.0"
name        = "pallet-ethereum"
version     = "4.0.0-dev"

[dependencies]
codec             = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
ethereum          = { version = "0.11.1", default-features = false, features = ["with-codec"] }
ethereum-types    = { version = "0.12", default-features = false }
evm               = { version = "0.33.1", features = ["with-codec"], default-features = false }
fp-consensus      = { version = "2.0.0-dev", path = "../../primitives/consensus", default-features = false }
fp-evm            = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
fp-rpc            = { version = "3.0.0-dev", path = "../../primitives/rpc", default-features = false }
fp-self-contained = { version = "1.0.0-dev", path = "../../primitives/self-contained", default-features = false }
fp-storage        = { version = "2.0.0", path = "../../primitives/storage", default-features = false }
frame-support     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
frame-system      = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
pallet-balances   = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
pallet-evm        = { version = "6.0.0-dev", default-features = false, path = "../evm" }
pallet-timestamp  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
rlp               = { version = "0.5", default-features = false }
rustc-hex         = { version = "2.1.0", default-features = false }
scale-info        = { version = "1.0.0", default-features = false, features = ["derive"] }
serde             = { version = "1.0.101", optional = true }
sha3              = { version = "0.8", default-features = false }
sp-io             = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-runtime        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-std            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

[dev-dependencies]
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }
sp-core      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"serde",
	"rustc-hex/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-evm/std",
	"sp-io/std",
	"sp-std/std",
	"fp-evm/std",
	"ethereum/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
	"fp-consensus/std",
	"fp-rpc/std",
	"fp-storage/std",
	"evm/std",
	"fp-self-contained/std",
	"scale-info/std",
]
