[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "FRAME EVM contracts pallet"
edition     = "2018"
homepage    = "https://substrate.io"
license     = "Apache-2.0"
name        = "pallet-evm"
readme      = "README.md"
repository  = "https://github.com/paritytech/frontier/"
version     = "6.0.0-dev"

	[package.metadata.docs.rs]
	targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec              = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
evm                = { version = "0.33.1", default-features = false, features = ["with-codec"] }
evm-gasometer      = { version = "0.33.0", default-features = false }
evm-runtime        = { version = "0.33.0", default-features = false }
fp-evm             = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
frame-benchmarking = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3", default-features = false, optional = true }
frame-support      = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
frame-system       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
hex                = { version = "0.4", default-features = false }
log                = { version = "0.4", default-features = false }
pallet-balances    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
pallet-timestamp   = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
primitive-types    = { version = "0.10.0", default-features = false, features = ["rlp", "byteorder"] }
rlp                = { version = "0.5", default-features = false }
scale-info         = { version = "1.0.0", default-features = false, features = ["derive"] }
serde              = { version = "1.0.101", optional = true, features = ["derive"] }
sha3               = { version = "0.8", default-features = false }
sp-core            = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-io              = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-runtime         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-std             = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"frame-benchmarking/std",
	"sp-std/std",
	"fp-evm/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"evm/with-serde",
	"evm-runtime/std",
	"evm-gasometer/std",
	"pallet-timestamp/std",
	"log/std",
	"hex/std",
	"scale-info/std",
]
