[package]
authors       = ["Parity Technologies <admin@parity.io>"]
description   = "Primitive EVM abstractions for Substrate."
documentation = "https://docs.rs/sp-evm"
edition       = "2018"
homepage      = "https://substrate.io"
license       = "Apache-2.0"
name          = "fp-evm"
repository    = "https://github.com/paritytech/frontier/"
version       = "3.0.0-dev"

	[package.metadata.docs.rs]
	targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec   = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
evm     = { version = "0.33.1", default-features = false, features = ["with-codec"] }
serde   = { version = "1.0.101", optional = true, features = ["derive"] }
sp-core = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2", default-features = false }
sp-std  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-std/std",
	"serde",
	"codec/std",
	"evm/std",
	"evm/with-serde",
]
