[package]
authors     = ["Parity Technologies <admin@parity.io"]
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
edition     = "2018"
license     = "Apache-2.0"
name        = "fp-rpc"
version     = "3.0.0-dev"

[dependencies]
codec          = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
ethereum       = { version = "0.11.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.12", default-features = false }
fp-evm         = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
scale-info     = { version = "1.0.0", default-features = false, features = ["derive"] }
sp-api         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-core        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-io          = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-runtime     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-std         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-api/std",
	"fp-evm/std",
	"ethereum/std",
	"ethereum-types/std",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"scale-info/std",
]
