[package]
authors     = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build       = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition     = "2018"
homepage    = "https://substrate.io"
license     = "Unlicense"
name        = "frontier-template-node"
publish     = false
repository  = "https://github.com/substrate-developer-hub/frontier-node-template/"
version     = "0.0.0"

	[package.metadata.docs.rs]
	targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait    = "0.1"
futures        = "0.3"
jsonrpc-pubsub = "18.0.0"
log            = "0.4.8"
structopt      = "0.3.8"

sc-cli                   = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2", features = ["wasmtime"] }
sc-client-api            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-consensus             = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-consensus-aura        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-consensus-manual-seal = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-executor              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2", features = ["wasmtime"] }
sc-finality-grandpa      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-keystore              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-network               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-service               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2", features = ["wasmtime"] }
sc-telemetry             = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-transaction-pool      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-transaction-pool-api  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-consensus             = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-consensus-aura        = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-core                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-finality-grandpa      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-inherents             = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-runtime               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-timestamp             = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

# These dependencies are used for the node template's RPCs
jsonrpc-core                   = "18.0.0"
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-basic-authorship            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-rpc                         = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sc-rpc-api                     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-api                         = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-block-builder               = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-blockchain                  = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
substrate-frame-rpc-system     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

# These dependencies are used for runtime benchmarking
frame-benchmarking     = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
frame-benchmarking-cli = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

fc-consensus              = { path = "../../client/consensus" }
fc-db                     = { path = "../../client/db" }
fc-mapping-sync           = { path = "../../client/mapping-sync" }
fc-rpc                    = { path = "../../client/rpc" }
fc-rpc-core               = { path = "../../client/rpc-core" }
fp-consensus              = { path = "../../primitives/consensus" }
fp-rpc                    = { path = "../../primitives/rpc" }
fp-storage                = { path = "../../primitives/storage" }
frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }

pallet-base-fee    = { path = "../../frame/base-fee" }
pallet-dynamic-fee = { path = "../../frame/dynamic-fee" }
pallet-ethereum    = { path = "../../frame/ethereum" }
pallet-evm         = { path = "../../frame/evm" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

[features]
aura = ["frontier-template-runtime/aura"]
default = ["aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
	"frontier-template-runtime/runtime-benchmarks",
]
